force-app/main/default/objects/cgcloud__Account_Task_Template__c/cgcloud__Account_Task_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the customer task template,  to be used for customer tasks.</description>
    <label>Customer Task Template</label>
    <nameField>
        <label>Customer Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Task Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>