force-app/main/default/objects/cgcloud__Account_Task_Template__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The customer task template is active and can be used for customer task creation.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>