force-app/main/default/objects/cgcloud__Account_Task_Template__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Sorting order of the customer task template in overviews.</description>
    <label>Sort</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>