force-app/main/default/objects/cgcloud__Account_Task_Template__c/fields/cgcloud__User_Roles__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Roles__c</fullName>
    <description>User roles required for the user when creating calls based on this template.</description>
    <label>User Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CGCloud_Master_Data_Admin</fullName>
            </value>
            <value>
                <fullName>CGCloud_KAM</fullName>
            </value>
            <value>
                <fullName>CGCloud_Sales_User</fullName>
            </value>
            <value>
                <fullName>CGCloud_Supervisor</fullName>
            </value>
            <value>
                <fullName>CGCloud_FA</fullName>
            </value>
            <value>
                <fullName>CGCloud_FM</fullName>
            </value>
            <value>
                <fullName>CGCloud_Inventory_Manager</fullName>
            </value>
            <value>
                <fullName>CGCloud_HQ_Sales_Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>