force-app/main/default/objects/cgcloud__Account_Task_Template__c/fields/cgcloud__Workflow__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to workflow.</description>
    <label>Workflow</label>
    <referenceTo>cgcloud__Workflow__c</referenceTo>
    <relationshipLabel>Customer Task Templates</relationshipLabel>
    <relationshipName>Customer_Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>